# media-gallery

./: .gitignore  README.md  boot_django.py  makemigrations.py  package.json  requirements.txt  setup.cfg  tsconfig.json  webpack.config.js
demo/demo/: settings.py  urls.py
demo/sample_app/: urls.py
demo/sample_app/templates/sample_app/: index.html
demo/sample_app/views/: index.py
src/media_gallery/: admin.py  urls.py
src/media_gallery/frontend/: gallery.ts
src/media_gallery/models/: media_file.py
src/media_gallery/templates/media_gallery/: gallery.html
src/media_gallery/views/: __init__.py  list.py
