[metadata]
name = media-gallery
version = 0.0.1
description = Django app media gallery
url = https://github.com/ToxicFrazzles/media-gallery

[options]
include_package_data = true
python_requires = >=3.8
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django >= 4.2
    pillow >= 10.0
    python-magic >= 0.4